feat: add scalable resumable audience ingestion
